--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -245,7 +245,7 @@
                       </div>
 
                       <div class="db-widget-inner-col">
-                        <a class="db-widget-project-trailer" @click="toggleVideo" href="https://deadbeat2069.myshopify.com/pages/explore-oc">
+                        <div class="db-widget-project-trailer" @click="toggleVideo">
                           
                           <div class="db-play">
                             <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg">
@@ -268,7 +268,7 @@
                             </span>
                           </div>
 
-                        </a>
+                        </div>
                       </div>
                     </div>
                   </div>
