explore oc mobile

--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -247,6 +247,16 @@
               </div>
             </div>
         </div>
+
+        <div class="db-row">
+          <div class="db-col">
+            BEHIND THE SCENES
+          </div>
+
+          <div class="db-col">
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+        </div>
       </div>
     </div>
 
@@ -361,6 +371,52 @@
         </div>
       </div>
     </div>
+
+    <div class="after-life">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            THE AFTER, AFTER LIFE 
+          </div>
+
+          <div class="db-col">
+            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the world of the undead in 2069.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="roadmap">
+
+      <div class="roadmap-bg-video-container">
+        <video class="db-bg-video --mb-view"
+            src="https://cdn.shopify.com/videos/c/o/v/1c279c7d77d2420a8d2a0bdc8e73805e.mp4"
+            allow="autoplay"
+            preload="auto"
+            control="false"
+            autoplay="true"
+            volume="0"
+            playsinline=""
+            muted=""
+            loop="">
+        </video>
+      </div>
+
+      <div class="db-container">
+        
+        <div class="db-row">
+          <div class="db-col">
+            IT’S A ROADMAP!
+          </div>
+
+          <div class="db-col">
+            Yep, that’s it, there’s where it all goes down. This is
+            the world we’re building together with you.
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section class="db-section db-section--explore-oc-after-life-roadmap">
@@ -603,136 +659,6 @@
               </svg>
             </a>
           </div>
-        </div>
-      </div>
-    </div>
-  </section> {% endcomment %}
-  {% comment %} <section class="db-section db-section--explore-oc-coming-soon">
-
-    <div class="db-container">
-      
-      <div class="db-row">
-        <div class="db-col">
-          STATION PROGRAMMING
-        </div>
-        <div class="db-col">
-          Our antenna is currently stolen. As soon as we get it back from the Party Bringers we’ll be back on the air! Stay tuned, Deadbeats...
-        </div>
-      </div>
-    </div>
-
-  </section>
-
-  <section class="db-section db-section--explore-oc-elevate">
-    <div class="db-container">
-      <div class="db-row">
-        <div class="db-col">
-          <h4>
-            The Company
-          </h4>
-          <h3>
-            ELEVATE PICTURES
-          </h3>
-        </div>
-        <div class="db-col">
-          <div class="db-image-container">
-            <img class="db-img"
-              alt=""
-              title=""
-              src="{{ 'About-Us__asset-elevate-v01.png' | asset_url }}"
-              width=""
-              height=""
-              loading="lazy"/>
-          </div>
-          <div class="db-elevate-description">
-            <p>
-              Elevate is a transmedia entertainment company chasing simple ideas that can change the world.
-              <br />
-              <br />
-              It means we understand and build ideas that scale across platforms and over time. It means we’re experts in business judo, flipping problems into promise.
-            </p>
-          </div>
-          <div class="db-elevate-connect-with-us">
-            <div class="connect-with-us">
-              Explore the world of Deadbeat! Connect with us.
-            </div>
-            <div class="db-elevate-website">
-              <span>
-                WEBSITE
-              </span>
-              <a href="https://www.elevatepictures.com/">
-                https://www.elevatepictures.com/
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="db-section db-section--explore-oc-subscribe">
-    <div class="db-container">
-      <div class="db-row">
-        <div class="db-col">
-          <img class="db-img"
-            alt=""
-            title=""
-            src="{{ 'About-Us__asset-subscribe-v01.png' | asset_url }}"
-            width=""
-            height=""
-            loading="lazy"/>
-          <img class="db-img"
-            alt=""
-            title=""
-            src="{{ 'About-Us__asset-mb-subscribe-v01.png' | asset_url }}"
-            width=""
-            height=""
-            loading="lazy"/>
-        </div>
-        <div class="db-col">
-          <h4>
-            CREATE THE STORY WORLD
-          </h4>
-          <p>
-            Get updated to our exciting promotions, limited offers, articles and resources.
-          </p>
-          <form class="db-form--newsletter db-form validate"
-            id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            method="post"
-            action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
-            accept-charset="UTF-8"
-            target="_blank">
-            <div class="db-form-wrap">
-              <div class="db-form-group">
-                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-                  <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
-                </div>
-              </div>
-              <div class="db-form-group">
-                <input class="db-form-input required email"
-                  id="mce-EMAIL"
-                  type="email"
-                  name="EMAIL"
-                  placeholder="Enter Your Email Address"
-                  required=""
-                  value=""
-                  autocorrect="off"
-                  autocapitalize="off">
-                <button class="db-btn--form-subscribe db-btn"
-                  id="mc-embedded-subscribe"
-                  type="submit"
-                  name="subscribe">
-                  SUBSCRIBE
-                </button>
-              </div>
-            </div>
-            <div id="mce-responses" class="clear foot">
-              <div class="response" id="mce-error-response" style="display: none;"></div>
-              <div class="response" id="mce-success-response" style="display: none;"></div>
-            </div>
-          </form>
         </div>
       </div>
     </div>
