--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -41,7 +41,7 @@
 
               <div class="yaas-inner-row">
                 <div class="yaas-inner-col">
-                  DEAD IN THE HEAD
+                  Hi. Hello. Heya.
                 </div>
 
                 <div class="yaas-inner-col">
@@ -61,11 +61,7 @@
                 </div>
               </div>
 
-              <div class="yaas-inner-row">
-                <span>Hi.</span>
-                <span>Hello.</span>
-                <span>Heya.</span>
-              </div>
+              
             </div>
           </div>
         </div>
