--- a/snippets/widget--columbus.liquid
+++ b/snippets/widget--columbus.liquid
@@ -1,4 +1,4 @@
-<a href="#" class="db-widget-item --columbus" title="">
+<a href="https://deadbeat2069.myshopify.com/pages/explore-oc" class="db-widget-item --columbus" title="">
   <div class="db-widget-box">
     <div class="db-columbus">
       
