--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -1106,6 +1106,7 @@
                                         background-clip: text;
                                         -webkit-background-clip: text;
                                         -webkit-text-fill-color: transparent;
+                                        color:transparent;
 
                                         @media only screen and (max-width: 768px) {
                                           text-align: right;
