--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -28,7 +28,7 @@
                 <img class="db-img"
                   alt="Deadbeats Logo"
                   title="Deadbeats Logo"
-                  src="{{ 'About-Us__asset-DB-logo.png' | asset_url }}"
+                  src="{{ 'DB-Trademark__asset.png' | asset_url }}"
                   width=""
                   height=""
                   loading="lazy"
