--- a/assets/theme.css
+++ b/assets/theme.css
@@ -375,6 +375,13 @@ ul, ol {
     margin: 0 auto 16px;
   }
 }
+.db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(1) .db-site-link .db-site-logo {
+  max-width: 264px;
+  min-width: 264px;
+  width: 100%;
+  object-fit: cover;
+  display: block;
+}
 .db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(1) h4 {
   color: var(--whiteColor);
   font-family: var(--primaryFontFamily);
