--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -35,7 +35,7 @@
           <img class="db-site-logo db-img"
             alt="Deadbeat"
             title="Deadbeat"
-            src="{{ 'DB_Main_logo-v01-264x96.png' | asset_url }}"
+            src="{{ 'DB-Trademark__asset.png' | asset_url }}"
             width=""
             height=""
             loading="lazy"/>
