--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,120 +1,119 @@
-{% comment %}
-  hide on index/home page
-{% endcomment %}
-{% if template != 'index' %}
-
-  <footer class="db-footer site-footer">
-    <section class="db-section db-section--newsletter">
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
-            <a class="db-site-link"
+<footer class="db-footer site-footer">
+  <section class="db-section db-section--newsletter">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <a class="db-site-link"
+            title="Deadbeat"
+            href="{{ shop.url }}">
+            <img class="db-site-logo db-img"
+              alt="Deadbeat"
               title="Deadbeat"
-              href="{{ shop.url }}">
-              <img class="db-site-logo db-img"
-                alt="Deadbeat"
-                title="Deadbeat"
-                src="{{ 'DB-Trademark__asset.png' | asset_url }}"
+              src="{{ 'DB-Trademark__asset.png' | asset_url }}"
+              width=""
+              height=""
+              loading="lazy">
+          </a>
+          <h4>
+            BREAKING NEWS
+          </h4>
+          <p>
+            Put your digital John Hancock there mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
+          </p>
+          <ul class="db-contact-list">
+            <li class="db-contact-item">
+              <a class="db-contact-link"
+                title="Contact Email"
+                href="mailto:example@deadbeat2069.com">
+                <span class="db-contact-label">EMAIL</span>
+                <span class="db-contact-value">example@deadbeat2069.com</span>
+              </a>
+            </li>
+            <li class="db-contact-item">
+              <a class="db-contact-link"
+                title="Contact Number"
+                href="tel:44(0)2030020224">
+                <span class="db-contact-label">CALL</span>
+                <span class="db-contact-value">+44 (0)20 30020224</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="db-col">
+          <img class="db-img-figure01 db-img"
+            alt=""
+            title=""
+            src="{{ 'DB_Footer_NewsletterFigure01_v01-809x512.png' | asset_url }}"
+            width=""
+            height=""
+            loading="lazy">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="db-section db-section--primary">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <div class="db-inner-row">
+            <a class="db-elevate-link"
+              title=""
+              href="">
+              <img class="db-elevate-logo db-img"
+                alt=""
+                title=""
+                src="{{ 'DB_Elevate_logo-v01-72x81.png' | asset_url }}"
                 width=""
                 height=""
                 loading="lazy">
             </a>
-            <h4>
-              BREAKING NEWS
-            </h4>
             <p>
-              Put your digital John Hancock there mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
+              Elevate is a transmedia entertainment company chasing simple ideas that can change the world.
             </p>
-            <ul class="db-contact-list">
-              <li class="db-contact-item">
-                <a class="db-contact-link"
-                  title="Contact Email"
-                  href="mailto:example@deadbeat2069.com">
-                  <span class="db-contact-label">EMAIL</span>
-                  <span class="db-contact-value">example@deadbeat2069.com</span>
-                </a>
-              </li>
-              <li class="db-contact-item">
-                <a class="db-contact-link"
-                  title="Contact Number"
-                  href="tel:44(0)2030020224">
-                  <span class="db-contact-label">CALL</span>
-                  <span class="db-contact-value">+44 (0)20 30020224</span>
-                </a>
-              </li>
-            </ul>
           </div>
-          <div class="db-col">
-            <img class="db-img-figure01 db-img"
-              alt=""
-              title=""
-              src="{{ 'DB_Footer_NewsletterFigure01_v01-809x512.png' | asset_url }}"
-              width=""
-              height=""
-              loading="lazy">
-          </div>
+          <p class="db-copyright">
+            &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
+          </p>
         </div>
-      </div>
-    </section>
-    <section class="db-section db-section--primary">
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
-            <div class="db-inner-row">
-              <a class="db-elevate-link"
-                title=""
-                href="">
-                <img class="db-elevate-logo db-img"
-                  alt=""
-                  title=""
-                  src="{{ 'DB_Elevate_logo-v01-72x81.png' | asset_url }}"
-                  width=""
-                  height=""
-                  loading="lazy">
-              </a>
-              <p>
-                Elevate is a transmedia entertainment company chasing simple ideas that can change the world.
-              </p>
-            </div>
-            <p class="db-copyright">
-              &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
-            </p>
-          </div>
-          <div class="db-col">
+        <div class="db-col">
 
-            {% if linklists.footer.links.size > 0 %}
-
-              <ul class="db-menu-list">
-
-                {% for menuItem in linklists.footer.links %}
-
-                  <li class="db-menu-item">
-                    <a class="db-menu-link"
-                      title="{{ menuItem.title }}"
-                      href="{{ menuItem.url }}">
-                      {{ menuItem.title }}
-                    </a>
-                  </li>
-
-                {% endfor %}
-
-              </ul>
-
-            {% endif %}
+          {% if linklists.footer.links.size > 0 %}
             
-          </div>
-          <div class="db-col">
-            <h5>
-              SOCIALS
-            </h5>
-            {% render 'socials' %}
-          </div>
-        </div>
-        <p class="db-copyright">
-          &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
-        </p>
-      </div>
-    </section>
-  </footer>
+            {% if linklists.footer.links.size > 4 %}
+              {% assign column_count = '--column-count-2' %}
+            {% else %}
+              {% assign column_count = '--column-count-1' %}
+            {% endif %}
 
-{% endif %}
+            <ul class="db-menu-list {{ column_count }}">
+
+              {% for menuItem in linklists.footer.links %}
+
+                <li class="db-menu-item">
+                  <a class="db-menu-link"
+                    title="{{ menuItem.title }}"
+                    href="{{ menuItem.url }}">
+                    {{ menuItem.title }}
+                  </a>
+                </li>
+
+              {% endfor %}
+
+            </ul>
+
+          {% endif %}
+          
+        </div>
+        <div class="db-col">
+          <h5>
+            SOCIALS
+          </h5>
+          {% render 'socials' %}
+        </div>
+      </div>
+      <p class="db-copyright">
+        &copy; {{ "now" | date: "%Y" }} Deadbeat - All rights reserved
+      </p>
+    </div>
+  </section>
+</footer>
