--- a/styles/db-theme/_footer.scss
+++ b/styles/db-theme/_footer.scss
@@ -400,7 +400,6 @@
             }
 
             .db-menu-list {
-              column-count: 2;
               column-gap: 130px;
 
               @media only screen and (max-width: 1440px) {
@@ -433,6 +432,14 @@
                     color: $secondaryColor;
                   }
                 }
+              }
+
+              &.--column-count-1 {
+                column-count: 1;
+              }
+
+              &.--column-count-2 {
+                column-count: 2;
               }
             }
           }
