--- a/styles/db-theme/_header.scss
+++ b/styles/db-theme/_header.scss
@@ -96,6 +96,8 @@
             justify-content: center;
             align-items: center;
             gap: 24px;
+            
+            display: none;
 
             .db-btn-label {
               display: flex;
@@ -529,7 +531,7 @@
                     .db-menu-link {
                       transition:
                         color 200ms ease-in-out 0ms,
-                        opacity 200ms ease-in-out 2.8s;
+                        opacity 200ms ease-in-out 3.0s;
 
                       &::before {
                         transition-delay: 3.2s;
