--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -11,9 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-
-
+    
     // .spotify-wrapper {
     //   // a {
     //   //   text-decoration: none;
@@ -390,9 +388,10 @@
   .db-section--banner {
     position: relative;
     width: 100%;
-    height: 100vh;
-    padding: 0 20px;
-    overflow: hidden;
+    // height: 100vh;
+    height: auto;
+    padding: 0 20px 50px;
+    // overflow: hidden;
 
     @media only screen and (max-width: 1080px) {
       height: auto;
@@ -835,14 +834,14 @@
                     // overflow: hidden;
                     // cursor: grab;
 
-                    scroll-behavior: smooth;
-                    width: 100%;
-                    height: 100%;
-                    overflow: hidden;
-                    cursor: grab;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    // overflow: hidden;
+                    // scroll-behavior: smooth;
+                    // cursor: grab;
 
                     // .db-widget-row {
                     //   display: flex;
